src/java/resources_Antlr3/WhileCompilerParser.java
// $ANTLR 3.5.1 C:\\Users\\EyaSammari\\Documents\\TP_ESIR2\\TLC\\Projet TLC final V\\WhileCompiler.g 2025-01-22 01:55:29

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.debug.*;
import java.io.IOException;
import org.antlr.runtime.tree.*;


@SuppressWarnings("all")
public class WhileCompilerParser extends DebugParser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "Dec", "EQUALS", "Maj", "Min", 
		"N_Affectation", "N_Call", "N_Command", "N_Commands", "N_Cons", "N_Definition", 
		"N_Else", "N_Expr_base", "N_Expression", "N_Exprs", "N_For", "N_Foreach", 
		"N_Function", "N_Hd", "N_If", "N_Input", "N_List", "N_Nil", "N_Nope", 
		"N_Output", "N_Program", "N_Symbol", "N_Tl", "N_Variable", "N_Vars", "N_While", 
		"Symbol", "Variable", "WS", "' = '", "'%'", "'('", "')'", "','", "':'", 
		"':='", "';'", "'cons '", "'cons'", "'do'", "'else'", "'fi'", "'for'", 
		"'foreach'", "'function'", "'hd '", "'if'", "'in'", "'list '", "'list'", 
		"'nil'", "'nop'", "'od'", "'read'", "'then'", "'tl '", "'while'", "'write'"
	};
	public static final int EOF=-1;
	public static final int T__37=37;
	public static final int T__38=38;
	public static final int T__39=39;
	public static final int T__40=40;
	public static final int T__41=41;
	public static final int T__42=42;
	public static final int T__43=43;
	public static final int T__44=44;
	public static final int T__45=45;
	public static final int T__46=46;
	public static final int T__47=47;
	public static final int T__48=48;
	public static final int T__49=49;
	public static final int T__50=50;
	public static final int T__51=51;
	public static final int T__52=52;
	public static final int T__53=53;
	public static final int T__54=54;
	public static final int T__55=55;
	public static final int T__56=56;
	public static final int T__57=57;
	public static final int T__58=58;
	public static final int T__59=59;
	public static final int T__60=60;
	public static final int T__61=61;
	public static final int T__62=62;
	public static final int T__63=63;
	public static final int T__64=64;
	public static final int T__65=65;
	public static final int Dec=4;
	public static final int EQUALS=5;
	public static final int Maj=6;
	public static final int Min=7;
	public static final int N_Affectation=8;
	public static final int N_Call=9;
	public static final int N_Command=10;
	public static final int N_Commands=11;
	public static final int N_Cons=12;
	public static final int N_Definition=13;
	public static final int N_Else=14;
	public static final int N_Expr_base=15;
	public static final int N_Expression=16;
	public static final int N_Exprs=17;
	public static final int N_For=18;
	public static final int N_Foreach=19;
	public static final int N_Function=20;
	public static final int N_Hd=21;
	public static final int N_If=22;
	public static final int N_Input=23;
	public static final int N_List=24;
	public static final int N_Nil=25;
	public static final int N_Nope=26;
	public static final int N_Output=27;
	public static final int N_Program=28;
	public static final int N_Symbol=29;
	public static final int N_Tl=30;
	public static final int N_Variable=31;
	public static final int N_Vars=32;
	public static final int N_While=33;
	public static final int Symbol=34;
	public static final int Variable=35;
	public static final int WS=36;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public static final String[] ruleNames = new String[] {
		"invalidRule", "function", "inputsub", "exprs", "vars", "input", "definition", 
		"exprbase", "program", "lexpr", "command", "expression", "output", "commands"
	};

	public static final boolean[] decisionCanBacktrack = new boolean[] {
		false, // invalid decision
		false, false, false, false, false, false, false, false, false, false, 
		    false, false, false, false, false, false, false, false, false, false, 
		    false, false, false, false, false, false, false, false, false, false, 
		    false, false, false, false, false, false, false, false, false, false, 
		    false
	};

 
	public int ruleLevel = 0;
	public int getRuleLevel() { return ruleLevel; }
	public void incRuleLevel() { ruleLevel++; }
	public void decRuleLevel() { ruleLevel--; }
	public WhileCompilerParser(TokenStream input) {
		this(input, DebugEventSocketProxy.DEFAULT_DEBUGGER_PORT, new RecognizerSharedState());
	}
	public WhileCompilerParser(TokenStream input, int port, RecognizerSharedState state) {
		super(input, state);
		DebugEventSocketProxy proxy =
			new DebugEventSocketProxy(this,port,adaptor);
		setDebugListener(proxy);
		setTokenStream(new DebugTokenStream(input,proxy));
		try {
			proxy.handshake();
		}
		catch (IOException ioe) {
			reportError(ioe);
		}
		TreeAdaptor adap = new CommonTreeAdaptor();
		setTreeAdaptor(adap);
		proxy.setTreeAdaptor(adap);
	}

	public WhileCompilerParser(TokenStream input, DebugEventListener dbg) {
		super(input, dbg);
		 
		TreeAdaptor adap = new CommonTreeAdaptor();
		setTreeAdaptor(adap);

	}

	protected boolean evalPredicate(boolean result, String predicate) {
		dbg.semanticPredicate(result, predicate);
		return result;
	}

		protected DebugTreeAdaptor adaptor;
		public void setTreeAdaptor(TreeAdaptor adaptor) {
			this.adaptor = new DebugTreeAdaptor(dbg,adaptor);
		}
		public TreeAdaptor getTreeAdaptor() {
			return adaptor;
		}
	@Override public String[] getTokenNames() { return WhileCompilerParser.tokenNames; }
	@Override public String getGrammarFileName() { return "C:\\Users\\EyaSammari\\Documents\\TP_ESIR2\\TLC\\Projet TLC final V\\WhileCompiler.g"; }


	public static class program_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "program"
	// C:\\Users\\EyaSammari\\Documents\\TP_ESIR2\\TLC\\Projet TLC final V\\WhileCompiler.g:50:1: program : ( WS )* ( function ( WS )* )+ -> ^( N_Program ( function )+ ) ;
	public final WhileCompilerParser.program_return program() throws RecognitionException {
		WhileCompilerParser.program_return retval = new WhileCompilerParser.program_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token WS1=null;
		Token WS3=null;
		ParserRuleReturnScope function2 =null;

		Object WS1_tree=null;
		Object WS3_tree=null;
		RewriteRuleTokenStream stream_WS=new RewriteRuleTokenStream(adaptor,"token WS");
		RewriteRuleSubtreeStream stream_function=new RewriteRuleSubtreeStream(adaptor,"rule function");

		try { dbg.enterRule(getGrammarFileName(), "program");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(50, 0);

		try {
			// C:\\Users\\EyaSammari\\Documents\\TP_ESIR2\\TLC\\Projet TLC final V\\WhileCompiler.g:50:8: ( ( WS )* ( function ( WS )* )+ -> ^( N_Program ( function )+ ) )
			dbg.enterAlt(1);

			// C:\\Users\\EyaSammari\\Documents\\TP_ESIR2\\TLC\\Projet TLC final V\\WhileCompiler.g:50:10: ( WS )* ( function ( WS )* )+
			{
			dbg.location(50,10);
			// C:\\Users\\EyaSammari\\Documents\\TP_ESIR2\\TLC\\Projet TLC final V\\WhileCompiler.g:50:10: ( WS )*
			try { dbg.enterSubRule(1);

			loop1:
			while (true) {
				int alt1=2;
				try { dbg.enterDecision(1, decisionCanBacktrack[1]);

				int LA1_0 = input.LA(1);
				if ( (LA1_0==WS) ) {
					alt1=1;
				}

				} finally {dbg.exitDecision(1);}

				switch (alt1) {
				case 1 :
					dbg.enterAlt(1);

					// C:\\Users\\EyaSammari\\Documents\\TP_ESIR2\\TLC\\Projet TLC final V\\WhileCompiler.g:50:10: WS
					{
					dbg.location(50,10);
					WS1=(Token)match(input,WS,FOLLOW_WS_in_program320);  
					stream_WS.add(WS1);

					}
					break;

				default :
					break loop1;
				}
			}
			} finally {dbg.exitSubRule(1);}
			dbg.location(50,14);
			// C:\\Users\\EyaSammari\\Documents\\TP_ESIR2\\TLC\\Projet TLC final V\\WhileCompiler.g:50:14: ( function ( WS )* )+
			int cnt3=0;
			try { dbg.enterSubRule(3);

			loop3:
			while (true) {
				int alt3=2;
				try { dbg.enterDecision(3, decisionCanBacktrack[3]);

				int LA3_0 = input.LA(1);
				if ( (LA3_0==52) ) {
					alt3=1;
				}

				} finally {dbg.exitDecision(3);}

				switch (alt3) {
				case 1 :
					dbg.enterAlt(1);

					// C:\\Users\\EyaSammari\\Documents\\TP_ESIR2\\TLC\\Projet TLC final V\\WhileCompiler.g:50:15: function ( WS )*
					{
					dbg.location(50,15);
					pushFollow(FOLLOW_function_in_program324);
					function2=function();
					state._fsp--;

					stream_function.add(function2.getTree());dbg.location(50,24);
					// C:\\Users\\EyaSammari\\Documents\\TP_ESIR2\\TLC\\Projet TLC final V\\WhileCompiler.g:50:24: ( WS )*
					try { dbg.enterSubRule(2);

					loop2:
					while (true) {
						int alt2=2;
						try { dbg.enterDecision(2, decisionCanBacktrack[2]);

						int LA2_0 = input.LA(1);
						if ( (LA2_0==WS) ) {
							alt2=1;
						}

						} finally {dbg.exitDecision(2);}

						switch (alt2) {
						case 1 :
							dbg.enterAlt(1);

							// C:\\Users\\EyaSammari\\Documents\\TP_ESIR2\\TLC\\Projet TLC final V\\WhileCompiler.g:50:24: WS
							{
							dbg.location(50,24);
							WS3=(Token)match(input,WS,FOLLOW_WS_in_program326);  
							stream_WS.add(WS3);

							}
							break;

						default :
							break loop2;
						}
					}
					} finally {dbg.exitSubRule(2);}

					}
					break;

				default :
					if ( cnt3 >= 1 ) break loop3;
					EarlyExitException eee = new EarlyExitException(3, input);
					dbg.recognitionException(eee);

					throw eee;
				}
				cnt3++;
			}
			} finally {dbg.exitSubRule(3);}

			// AST REWRITE
			// elements: function
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 50:30: -> ^( N_Program ( function )+ )
			{
				dbg.location(50,33);
				// C:\\Users\\EyaSammari\\Documents\\TP_ESIR2\\TLC\\Projet TLC final V\\WhileCompiler.g:50:33: ^( N_Program ( function )+ )
				{
				Object root_1 = (Object)adaptor.nil();
				dbg.location(50,35);
				root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(N_Program, "N_Program"), root_1);
				dbg.location(50,45);
				if ( !(stream_function.hasNext()) ) {
					throw new RewriteEarlyExitException();
				}
				while ( stream_function.hasNext() ) {
					dbg.location(50,45);
					adaptor.addChild(root_1, stream_function.nextTree());
				}
				stream_function.reset();

				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(50, 54);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "program");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

		return retval;
	}
	// $ANTLR end "program"


	public static class function_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "function"
	// C:\\Users\\EyaSammari\\Documents\\TP_ESIR2\\TLC\\Projet TLC final V\\WhileCompiler.g:52:1: function : 'function' WS Symbol ( WS )? ':' WS definition -> ^( N_Function ^( Symbol definition ) ) ;
	public final WhileCompilerParser.function_return function() throws RecognitionException {
		WhileCompilerParser.function_return retval = new WhileCompilerParser.function_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token string_literal4=null;
		Token WS5=null;
		Token Symbol6=null;
		Token WS7=null;
		Token char_literal8=null;
		Token WS9=null;
		ParserRuleReturnScope definition10 =null;

		Object string_literal4_tree=null;
		Object WS5_tree=null;
		Object Symbol6_tree=null;
		Object WS7_tree=null;
		Object char_literal8_tree=null;
		Object WS9_tree=null;
		RewriteRuleTokenStream stream_Symbol=new RewriteRuleTokenStream(adaptor,"token Symbol");
		RewriteRuleTokenStream stream_WS=new RewriteRuleTokenStream(adaptor,"token WS");
		RewriteRuleTokenStream stream_52=new RewriteRuleTokenStream(adaptor,"token 52");
		RewriteRuleTokenStream stream_42=new RewriteRuleTokenStream(adaptor,"token 42");
		RewriteRuleSubtreeStream stream_definition=new RewriteRuleSubtreeStream(adaptor,"rule definition");

		try { dbg.enterRule(getGrammarFileName(), "function");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(52, 0);

		try {
			// C:\\Users\\EyaSammari\\Documents\\TP_ESIR2\\TLC\\Projet TLC final V\\WhileCompiler.g:52:9: ( 'function' WS Symbol ( WS )? ':' WS definition -> ^( N_Function ^( Symbol definition ) ) )
			dbg.enterAlt(1);

			// C:\\Users\\EyaSammari\\Documents\\TP_ESIR2\\TLC\\Projet TLC final V\\WhileCompiler.g:52:11: 'function' WS Symbol ( WS )? ':' WS definition
			{
			dbg.location(52,11);
			string_literal4=(Token)match(input,52,FOLLOW_52_in_function345);  
			stream_52.add(string_literal4);
			dbg.location(52,22);
			WS5=(Token)match(input,WS,FOLLOW_WS_in_function347);  
			stream_WS.add(WS5);
			dbg.location(52,25);
			Symbol6=(Token)match(input,Symbol,FOLLOW_Symbol_in_function349);  
			stream_Symbol.add(Symbol6);
			dbg.location(52,32);
			// C:\\Users\\EyaSammari\\Documents\\TP_ESIR2\\TLC\\Projet TLC final V\\WhileCompiler.g:52:32: ( WS )?
			int alt4=2;
			try { dbg.enterSubRule(4);
			try { dbg.enterDecision(4, decisionCanBacktrack[4]);

			int LA4_0 = input.LA(1);
			if ( (LA4_0==WS) ) {
				alt4=1;
			}
			} finally {dbg.exitDecision(4);}

			switch (alt4) {
				case 1 :
					dbg.enterAlt(1);

					// C:\\Users\\EyaSammari\\Documents\\TP_ESIR2\\TLC\\Projet TLC final V\\WhileCompiler.g:52:32: WS
					{
					dbg.location(52,32);
					WS7=(Token)match(input,WS,FOLLOW_WS_in_function351);  
					stream_WS.add(WS7);

					}
					break;

			}
			} finally {dbg.exitSubRule(4);}
			dbg.location(52,36);
			char_literal8=(Token)match(input,42,FOLLOW_42_in_function354);  
			stream_42.add(char_literal8);
			dbg.location(52,40);
			WS9=(Token)match(input,WS,FOLLOW_WS_in_function356);  
			stream_WS.add(WS9);
			dbg.location(52,43);
			pushFollow(FOLLOW_definition_in_function358);
			definition10=definition();
			state._fsp--;

			stream_definition.add(definition10.getTree());
			// AST REWRITE
			// elements: Symbol, definition
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 52:53: -> ^( N_Function ^( Symbol definition ) )
			{
				dbg.location(52,56);
				// C:\\Users\\EyaSammari\\Documents\\TP_ESIR2\\TLC\\Projet TLC final V\\WhileCompiler.g:52:56: ^( N_Function ^( Symbol definition ) )
				{
				Object root_1 = (Object)adaptor.nil();
				dbg.location(52,58);
				root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(N_Function, "N_Function"), root_1);
				dbg.location(52,69);
				// C:\\Users\\EyaSammari\\Documents\\TP_ESIR2\\TLC\\Projet TLC final V\\WhileCompiler.g:52:69: ^( Symbol definition )
				{
				Object root_2 = (Object)adaptor.nil();
				dbg.location(52,71);
				root_2 = (Object)adaptor.becomeRoot(stream_Symbol.nextNode(), root_2);
				dbg.location(52,78);
				adaptor.addChild(root_2, stream_definition.nextTree());
				adaptor.addChild(root_1, root_2);
				}

				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(52, 89);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "function");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

		return retval;
	}
	// $ANTLR end "function"


	public static class definition_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "definition"
	// C:\\Users\\EyaSammari\\Documents\\TP_ESIR2\\TLC\\Projet TLC final V\\WhileCompiler.g:54:1: definition : 'read' WS ( input WS )? '%' WS commands WS '%' WS 'write' output -> ^( N_Definition ( input )? ^( N_Commands commands ) ^( N_Output output ) ) ;
	public final WhileCompilerParser.definition_return definition() throws RecognitionException {
		WhileCompilerParser.definition_return retval = new WhileCompilerParser.definition_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token string_literal11=null;
		Token WS12=null;
		Token WS14=null;
		Token char_literal15=null;
		Token WS16=null;
		Token WS18=null;
		Token char_literal19=null;
		Token WS20=null;
		Token string_literal21=null;
		ParserRuleReturnScope input13 =null;
		ParserRuleReturnScope commands17 =null;
		ParserRuleReturnScope output22 =null;

		Object string_literal11_tree=null;
		Object WS12_tree=null;
		Object WS14_tree=null;
		Object char_literal15_tree=null;
		Object WS16_tree=null;
		Object WS18_tree=null;
		Object char_literal19_tree=null;
		Object WS20_tree=null;
		Object string_literal21_tree=null;
		RewriteRuleTokenStream stream_38=new RewriteRuleTokenStream(adaptor,"token 38");
		RewriteRuleTokenStream stream_61=new RewriteRuleTokenStream(adaptor,"token 61");
		RewriteRuleTokenStream stream_WS=new RewriteRuleTokenStream(adaptor,"token WS");
		RewriteRuleTokenStream stream_65=new RewriteRuleTokenStream(adaptor,"token 65");
		RewriteRuleSubtreeStream stream_output=new RewriteRuleSubtreeStream(adaptor,"rule output");
		RewriteRuleSubtreeStream stream_input=new RewriteRuleSubtreeStream(adaptor,"rule input");
		RewriteRuleSubtreeStream stream_commands=new RewriteRuleSubtreeStream(adaptor,"rule commands");

		try { dbg.enterRule(getGrammarFileName(), "definition");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(54, 0);

		try {
			// C:\\Users\\EyaSammari\\Documents\\TP_ESIR2\\TLC\\Projet TLC final V\\WhileCompiler.g:54:11: ( 'read' WS ( input WS )? '%' WS commands WS '%' WS 'write' output -> ^( N_Definition ( input )? ^( N_Commands commands ) ^( N_Output output ) ) )
			dbg.enterAlt(1);

			// C:\\Users\\EyaSammari\\Documents\\TP_ESIR2\\TLC\\Projet TLC final V\\WhileCompiler.g:55:2: 'read' WS ( input WS )? '%' WS commands WS '%' WS 'write' output
			{
			dbg.location(55,2);
			string_literal11=(Token)match(input,61,FOLLOW_61_in_definition377);  
			stream_61.add(string_literal11);
			dbg.location(55,9);
			WS12=(Token)match(input,WS,FOLLOW_WS_in_definition379);  
			stream_WS.add(WS12);
			dbg.location(55,12);
			// C:\\Users\\EyaSammari\\Documents\\TP_ESIR2\\TLC\\Projet TLC final V\\WhileCompiler.g:55:12: ( input WS )?
			int alt5=2;
			try { dbg.enterSubRule(5);
			try { dbg.enterDecision(5, decisionCanBacktrack[5]);

			int LA5_0 = input.LA(1);
			if ( ((LA5_0 >= Variable && LA5_0 <= WS)) ) {
				alt5=1;
			}
			} finally {dbg.exitDecision(5);}

			switch (alt5) {
				case 1 :
					dbg.enterAlt(1);

					// C:\\Users\\EyaSammari\\Documents\\TP_ESIR2\\TLC\\Projet TLC final V\\WhileCompiler.g:55:13: input WS
					{
					dbg.location(55,13);
					pushFollow(FOLLOW_input_in_definition382);
					input13=input();
					state._fsp--;

					stream_input.add(input13.getTree());dbg.location(55,19);
					WS14=(Token)match(input,WS,FOLLOW_WS_in_definition384);  
					stream_WS.add(WS14);

					}
					break;

			}
			} finally {dbg.exitSubRule(5);}
			dbg.location(55,24);
			char_literal15=(Token)match(input,38,FOLLOW_38_in_definition388);  
			stream_38.add(char_literal15);
			dbg.location(55,28);
			WS16=(Token)match(input,WS,FOLLOW_WS_in_definition390);  
			stream_WS.add(WS16);
			dbg.location(55,31);
			pushFollow(FOLLOW_commands_in_definition392);
			commands17=commands();
			state._fsp--;

			stream_commands.add(commands17.getTree());dbg.location(55,40);
			WS18=(Token)match(input,WS,FOLLOW_WS_in_definition394);  
			stream_WS.add(WS18);
			dbg.location(55,43);
			char_literal19=(Token)match(input,38,FOLLOW_38_in_definition396);  
			stream_38.add(char_literal19);
			dbg.location(55,47);
			WS20=(Token)match(input,WS,FOLLOW_WS_in_definition398);  
			stream_WS.add(WS20);
			dbg.location(55,50);
			string_literal21=(Token)match(input,65,FOLLOW_65_in_definition400);  
			stream_65.add(string_literal21);
			dbg.location(55,58);
			pushFollow(FOLLOW_output_in_definition402);
			output22=output();
			state._fsp--;

			stream_output.add(output22.getTree());
			// AST REWRITE
			// elements: commands, input, output
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 55:65: -> ^( N_Definition ( input )? ^( N_Commands commands ) ^( N_Output output ) )
			{
				dbg.location(55,68);
				// C:\\Users\\EyaSammari\\Documents\\TP_ESIR2\\TLC\\Projet TLC final V\\WhileCompiler.g:55:68: ^( N_Definition ( input )? ^( N_Commands commands ) ^( N_Output output ) )
				{
				Object root_1 = (Object)adaptor.nil();
				dbg.location(55,70);
				root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(N_Definition, "N_Definition"), root_1);
				dbg.location(55,83);
				// C:\\Users\\EyaSammari\\Documents\\TP_ESIR2\\TLC\\Projet TLC final V\\WhileCompiler.g:55:83: ( input )?
				if ( stream_input.hasNext() ) {
					dbg.location(55,83);
					adaptor.addChild(root_1, stream_input.nextTree());
				}
				stream_input.reset();
				dbg.location(55,90);
				// C:\\Users\\EyaSammari\\Documents\\TP_ESIR2\\TLC\\Projet TLC final V\\WhileCompiler.g:55:90: ^( N_Commands commands )
				{
				Object root_2 = (Object)adaptor.nil();
				dbg.location(55,92);
				root_2 = (Object)adaptor.becomeRoot((Object)adaptor.create(N_Commands, "N_Commands"), root_2);
				dbg.location(55,103);
				adaptor.addChild(root_2, stream_commands.nextTree());
				adaptor.addChild(root_1, root_2);
				}
				dbg.location(55,113);
				// C:\\Users\\EyaSammari\\Documents\\TP_ESIR2\\TLC\\Projet TLC final V\\WhileCompiler.g:55:113: ^( N_Output output )
				{
				Object root_2 = (Object)adaptor.nil();
				dbg.location(55,115);
				root_2 = (Object)adaptor.becomeRoot((Object)adaptor.create(N_Output, "N_Output"), root_2);
				dbg.location(55,124);
				adaptor.addChild(root_2, stream_output.nextTree());
				adaptor.addChild(root_1, root_2);
				}

				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(55, 131);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "definition");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

		return retval;
	}
	// $ANTLR end "definition"


	public static class input_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "input"
	// C:\\Users\\EyaSammari\\Documents\\TP_ESIR2\\TLC\\Projet TLC final V\\WhileCompiler.g:57:1: input : ( inputsub )? -> ^( N_Input ( inputsub )? ) ;
	public final WhileCompilerParser.input_return input() throws RecognitionException {
		WhileCompilerParser.input_return retval = new WhileCompilerParser.input_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		ParserRuleReturnScope inputsub23 =null;

		RewriteRuleSubtreeStream stream_inputsub=new RewriteRuleSubtreeStream(adaptor,"rule inputsub");

		try { dbg.enterRule(getGrammarFileName(), "input");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(57, 0);

		try {
			// C:\\Users\\EyaSammari\\Documents\\TP_ESIR2\\TLC\\Projet TLC final V\\WhileCompiler.g:57:6: ( ( inputsub )? -> ^( N_Input ( inputsub )? ) )
			dbg.enterAlt(1);

			// C:\\Users\\EyaSammari\\Documents\\TP_ESIR2\\TLC\\Projet TLC final V\\WhileCompiler.g:57:8: ( inputsub )?
			{
			dbg.location(57,8);
			// C:\\Users\\EyaSammari\\Documents\\TP_ESIR2\\TLC\\Projet TLC final V\\WhileCompiler.g:57:8: ( inputsub )?
			int alt6=2;
			try { dbg.enterSubRule(6);
			try { dbg.enterDecision(6, decisionCanBacktrack[6]);

			int LA6_0 = input.LA(1);
			if ( (LA6_0==WS) ) {
				int LA6_1 = input.LA(2);
				if ( (LA6_1==Variable) ) {
					alt6=1;
				}
			}
			else if ( (LA6_0==Variable) ) {
				alt6=1;
			}
			} finally {dbg.exitDecision(6);}

			switch (alt6) {
				case 1 :
					dbg.enterAlt(1);

					// C:\\Users\\EyaSammari\\Documents\\TP_ESIR2\\TLC\\Projet TLC final V\\WhileCompiler.g:57:8: inputsub
					{
					dbg.location(57,8);
					pushFollow(FOLLOW_inputsub_in_input431);
					inputsub23=inputsub();
					state._fsp--;

					stream_inputsub.add(inputsub23.getTree());
					}
					break;

			}
			} finally {dbg.exitSubRule(6);}

			// AST REWRITE
			// elements: inputsub
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 57:18: -> ^( N_Input ( inputsub )? )
			{
				dbg.location(57,21);
				// C:\\Users\\EyaSammari\\Documents\\TP_ESIR2\\TLC\\Projet TLC final V\\WhileCompiler.g:57:21: ^( N_Input ( inputsub )? )
				{
				Object root_1 = (Object)adaptor.nil();
				dbg.location(57,23);
				root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(N_Input, "N_Input"), root_1);
				dbg.location(57,31);
				// C:\\Users\\EyaSammari\\Documents\\TP_ESIR2\\TLC\\Projet TLC final V\\WhileCompiler.g:57:31: ( inputsub )?
				if ( stream_inputsub.hasNext() ) {
					dbg.location(57,31);
					adaptor.addChild(root_1, stream_inputsub.nextTree());
